# phd-time-series-char

./: README.md  pyproject.toml
data/interim/: BioDare_is20016_by4741_rhythmicity.csv  BioDare_is20016_by4741_rhythmicity_copy.csv  BioDare_is20016_zwf1egf_rhythmicity.csv  BioDare_is20016_zwf1egf_rhythmicity_copy.csv  is20016_by4741_timeseries_biodare2_scaled.csv  is20016_zwf1egf_timeseries_biodare2.csv  is26643_htb2mCherry_flavin_timeseries_biodare2_scaled.csv  is26643_htb2mCherry_mCherry_timeseries_biodare2_scaled.csv
data/processed/: features_scaled.csv  freqs_df.csv  labels_df.csv  order_df.csv  power_df.csv
data/raw/: is19972_htb2mCherry_flavin_timeseries.csv  is19972_htb2mCherry_labels.csv  is20016_by4741_labels.csv  is20016_zwf1egf_flavin_timeseries.csv  is20016_zwf1egf_labels.csv  is20212_cenpkkoetter_flavin_timeseries.csv  is20212_cenpkkoetter_labels.csv  is26643_htb2mCherry_flavin_timeseries.csv  is26643_htb2mCherry_labels.csv  is26643_htb2mCherry_mCherry_timeseries.csv  (+20 more)
dev/: dev_umap_gridsearch.py
notebooks/: ar.ipynb  biodare2.ipynb  biodare2_roc.ipynb  glynn_classifier.ipynb  period_distribs.ipynb  random_3d.ipynb  sample_ts.ipynb  snr.ipynb  svm.ipynb  umap.ipynb
reports/: BioDare2.org  BioDare2_is26643.org  graphclust_is20016.txt  graphclust_st01253.txt  period_distribs.txt  svm_feat_compare.csv
scripts/: script_ar.py  script_biodare2_roc.py  script_glynn.py  script_graphclust.py  script_period_distribs.py  script_random_3d.py  script_rf.py  script_sample_ts.py  script_svm.py  script_svm_feat_compare.py  script_umap_grid.py  script_umap_single.py
(+7 files in other folders)
