[tool.poetry]
name = "time-series-char"
version = "0.1.0"
description = ""
authors = ["Arin Wongprommoon <arin.wongprommoon@ed.ac.uk>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = ">=1.13,<1.24"
pandas = ">=1.0,<2.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
scipy = ">=1.7.0"
scikit-learn = "^1.3.0"
umap-learn = "^0.5.3"
aliby = "^0.1.64"
pycatch22 = "^0.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"
jupyter = "^1.0.0"
flake8 = ">=4.0.1"
pyright = "^1.1.325"
jupytext = "^1.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
